Remove emojis from articles - clean professional content

--- a/content/posts/coq10-mitochondrial-energy-aging.mdx
+++ b/content/posts/coq10-mitochondrial-energy-aging.mdx
@@ -71,22 +71,22 @@ CoQ10 comes in two forms:
 
 Research-backed CoQ10 dosing:
 
-✓ **100-200mg daily** (general health/prevention)  
-✓ **200-400mg daily** (cardiovascular issues, statins, 50+)  
-✓ **Take with fat** (CoQ10 is fat-soluble; absorption increases 3x)  
-✓ **Morning or afternoon** (may interfere with sleep if taken evening)  
-✓ **Ubiquinol if 40+** (better bioavailability)
+ **100-200mg daily** (general health/prevention)  
+ **200-400mg daily** (cardiovascular issues, statins, 50+)  
+ **Take with fat** (CoQ10 is fat-soluble; absorption increases 3x)  
+ **Morning or afternoon** (may interfere with sleep if taken evening)  
+ **Ubiquinol if 40+** (better bioavailability)
 
 ## What to Look For
 
 Quality CoQ10 supplements:
 
-✓ **Ubiquinol (if 40+)** or high-quality ubiquinone  
-✓ **100-200mg per serving** (clinical dose)  
-✓ **Oil-based softgel** (enhances absorption)  
-✓ **Third-party tested** (CoQ10 degrades easily)  
-✓ **Sealed, dark packaging** (light-sensitive)  
-✓ **GMP-certified manufacturing**
+ **Ubiquinol (if 40+)** or high-quality ubiquinone  
+ **100-200mg per serving** (clinical dose)  
+ **Oil-based softgel** (enhances absorption)  
+ **Third-party tested** (CoQ10 degrades easily)  
+ **Sealed, dark packaging** (light-sensitive)  
+ **GMP-certified manufacturing**
 
 **Source:** Mantle & Dybring (2024). "CoQ10 and aging: Tissue distribution and clinical outcomes." *Free Radical Biology & Medicine*.
 
