Remove emojis from articles - clean professional content

--- a/content/posts/nad-boosters-human-trial-comparison.mdx
+++ b/content/posts/nad-boosters-human-trial-comparison.mdx
@@ -46,4 +46,4 @@ Additional studies will help clarify optimal dosing, timing, and population-spec
 
 Access the original full-text paper for deeper clinical validation.
 
-[Read Full Study ↗](https://www.nature.com/articles/s42255-025-01421-8)
+[Read Full Study ](https://www.nature.com/articles/s42255-025-01421-8)
